Kubernetes/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter-daemonset
spec:
  selector:
    matchLabels:
      app: node-exporter-daemonset
  template: 
    metadata:
      labels: 
        app: node-exporter-daemonset
    spec:
      hostNetwork: true
      containers: 
      - name: node-exporter
        image: prom/node-exporter:v1.12.0
        ports:
          - containerPort: 9100
            hostPort: 9100
        volumeMounts:
          - name: proc
            mountPath: /host/proc
            readOnly: true
          - name: sys
            mountPath: /host/sys
            readOnly: true 
      volumes:
      - name: proc
        hostPath: 
          path: /proc
      - name: sys
        hostPath:
          path: /sys
