Kubernetes/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexandria-backend
  namespace: alexandria
  labels:
    app: alexandria-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alexandria-backend
  strategy: {}
  template:
    metadata:
      labels:
        app: alexandria-backend
    spec:
      containers:
        - name: alexandria-backend
          image: alexandriabackend:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            periodSeconds: 20
            failureThreshold: 3
---
