Kubernetes/svc-alexandria-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexandria-backend
  namespace: alexandria
spec:
  type: ClusterIP
  selector:
    app: alexandria-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
