Kubernetes/svc-alexandria-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexandria-frontend
  namespace: alexandria
spec:
  type: ClusterIP
  selector:
    app: alexandria-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
