Kubernetes/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexandria-backend
  namespace: alexandria
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: alexandria-backend
