Kubernetes/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexandria-frontend
  namespace: alexandria
spec:
  type: NodePort
  selector:
    app: alexandria-frontend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
