Kubernetes/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: alexandria
spec:
  clusterIP: None   # headless, usado pelo StatefulSet
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
